# StateSmoother

./: README.md  Roadmap.md  VersionHistory.md  demonstration.ipynb  pyproject.toml  requirements.txt  setup.py  tests-dev.ipynb
_test/: test_smoother.py
src/state_smoother/: Smoother.py
state_smoother/: Smoother.py  __init__.py
state_smoother/errors/: __init__.py  log_perc_error.py  sq_err.py
tests/: test_smoother.py
tests/data/: eve_market_data.csv
